--- a/main.html
+++ b/main.html
@@ -1,16 +1,54 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<table border="1">
+    <thead>
+      <tr>
+        <th>Roll Number</th>
+        <th>Name</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>101</td>
+        <td>Sam</td>
+      </tr>
+      <tr>
+        <td>102</td>
+        <td>Harshu</td>
+      </tr>
+      <tr>
+        <td>103</td>
+        <td>Adi</td>
+      </tr>
+    </tbody>
+  </table>
 
+  <h2>List of medias</h2>
+
+  <ol>
+    <li>
+      <img src="https://picsum.photos/id/123/200/300" alt="Sample Image from Picsum">
+    </li>
+
+    <!-- Second Item: Video -->
+    <li>
+      <video controls>
+        <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+      </video>
+    </li>
+
+    <li>
+      <audio controls>
+        <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+      </audio>
+    </li>
+  </ol>
+
+    <script type="text/javascript" src="./script.js"></script>
 </body>
-
 </html>
